2005-08-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil.Cil/OpCode.cs
	  Mono.Cecil.Cil/ICilWorker.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/MetadataRoot.cs
	  Mono.Cecil.Implem/ReflectionHelper.cs
	  Mono.Cecil.Implem/CilWorker.cs
	  Mono.Cecil.Implem/StructureReader.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/ModuleDefinition.cs
	  Mono.Cecil.Implem/MethodReference.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/TypeDefinition.cs
	  Mono.Cecil.Implem/CodeReader.cs
	  Mono.Cecil.Implem/CodeWriter.cs
	  Mono.Cecil.Implem/Constants.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs
	  Mono.Cecil.Implem/MethodBody.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/MemoryBinaryWriter.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		On going work on the writing layer.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix a bug when reading chars inside a custom
		attribute signature.

2005-08-12  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs
	  CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/MetadataTableWriter.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/MemoryBinaryWriter.cs:
		Use a custom binary writer instead of the old one.

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil.Cil/BaseCodeVisitor.cs
	  Mono.Cecil.Cil/MethodHeader.cs
	  Mono.Cecil.Cil/ICodeVisitor.cs
	  Mono.Cecil.Implem/Instruction.cs
	  Mono.Cecil.Implem/MethodDefinition.cs