@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Fri Aug 12 14:30:14 CEST 2005
+ * Sun Aug 14 00:59:54 CEST 2005
  *
  *****************************************************************************/
 
@@ -129,7 +129,15 @@ namespace Mono.Cecil.Binary {
 				img.HintNameTable.RuntimeMain = HintNameTable.RuntimeMainExe;
 			}
 
-			img.PEOptionalHeader.NTSpecificFields.SubSystem = (SubSystem) m_kind;
+			switch (m_kind) {
+			case AssemblyKind.Dll :
+			case AssemblyKind.Console :
+				img.PEOptionalHeader.NTSpecificFields.SubSystem = SubSystem.WindowsCui;
+				break;
+			case AssemblyKind.Windows :
+				img.PEOptionalHeader.NTSpecificFields.SubSystem = SubSystem.WindowsGui;
+				break;
+			}
 
 			RVA importTable = new RVA (img.TextSection.VirtualAddress + m_mdWriter.ItStartPos);
 
